...
import androidx.compose.ui.text.input.VisualTransformation
import com.arturojas32.todoapp.R

@Composable
fun MyPasswordTextField(
    value: String,
    hintText: String = "Password",
    passwordVisibility: Boolean = true,
    onValueChange: (String) -> Unit,
    onPasswordVisibilityClick: () -> Unit = {},
    isEnabled: Boolean = true,
) {

...
                modifier = Modifier.clickable { onPasswordVisibilityClick() },
                painter = if (passwordVisibility) {
                    painterResource(R.drawable.ic_visibility_off)
                } else {
                    painterResource(R.drawable.ic_visibility_on)
                },
                contentDescription = "password visibility clickable icon",
                tint = MaterialTheme.colorScheme.primary
            )
        }, enabled = isEnabled,
        label = {
            Text(text = hintText)
        }
...
