...
                    CircularProgressIndicator(
                        modifier = Modifier.size(18.dp),
                        strokeWidth = 2.dp,
                        trackColor = MaterialTheme.colorScheme.onPrimary
                    )
                } else {
                    Text(text = "Create new user")
                }


            }
            TextButton(
                modifier = Modifier.fillMaxWidth(),
                shape = RoundedCornerShape(12),
                onClick = { onBackClick() }
            ) { Text(text = "Go back") }

            Spacer(modifier = Modifier.height(8.dp))

        }
    }
}
...
